fix hover on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,3 +10,8 @@ html{
 .custom-img { 
   background-image: url('https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=872&q=80');
 }
+
+/* disable hover effect on small screens */
+.disabled {
+  pointer-events: none;
+}
